--- a/index.html
+++ b/index.html
@@ -1,17 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>John's porfolio</title>
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+    <title>John's porfolio bootstrap</title>
 </head>
+
 <body>
-    
+    <header class="bg-light">
+        <nav class="d-flex justify-content-between container navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#">John's Portfolio Bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent"">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="#" class="nav-link active">Works</a></li>
+                        <li class="nav-item"><a href="#"class="nav-link active">Blog</a></li>
+                        <li class="nav-item"><a href="#"class="nav-link active">Contact</a></li>
+                    </ul>
+                </div>                
+            </div>
+        </nav>        
+    </header>
+    <main>
+        <div class="container">
+            <div class="first_block">
+                <div class="first_block__content">
+                    <h1>Hi, I am John, <br>Creative Technologist</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae placeat
+                        fuga aperiam cumque, consequuntur eius repellendus commodi, suscipit rerum, numquam tenetur?
+                        Mollitia!</p>
+                    <button>Download Resume</button>
+                </div>
+                <img src="../img/portrait.png" alt="">
+            </div>
+        </div>
+        <div class="second_block">
+            <div class="container">
+                <div class="second_block__head">
+                    <span>Recent posts</span>
+                    <a href="#">View all</a>
+                </div>
+                <div class="second_block__main">
+                    <div class="second_block__main__item">
+                        <h2>Making a design system from scratch</h2>
+                        <div class="second_block__main__item__content">
+                            <p id="date">18 Sep 2021 <span id="straight">|</span> Design, Pattern</p>
+                            <p id="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit libero
+                                dolore, tenetur sequi magni dolores distinctio natus veniam nesciunt dicta eveniet
+                                deserunt tempora recusandae et, ducimus esse, mollitia odit excepturi.</p>
+                        </div>
+                    </div>
+                    <div class="second_block__main__item">
+                        <h2>Creating pixel perfect icons in Figma</h2>
+                        <div class="second_block__main__item__content">
+                            <p id="date">18 Sep 2021 <span id="straight">|</span> Figma, Icon Design</p>
+                            <p id="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit libero
+                                dolore, tenetur sequi magni dolores distinctio natus veniam nesciunt dicta eveniet
+                                deserunt tempora recusandae et, ducimus esse, mollitia odit excepturi.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="third_block">
+            <div class="container">
+                <div class="third_block__featured">Featured works</div>
+                <div class="third_block__cards">
+                    <div class="card">
+                        <img src="../img/card1.jpg" alt="">
+                        <div class="card_content">
+                            <h2>Designing Dashboards</h2>
+                            <div>
+                                <span>2020</span>
+                                <p>Dasboard</p>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem corporis ut provident
+                                perferendis ab magni vero cum, officiis non fugit nobis? Velit dolorum alias labore
+                                maxime
+                                facere maiores ducimus cumque.</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <img src="../img/card2.jpg" alt="">
+                        <div class="card_content">
+                            <h2>Vibrant Portraits of 2020</h2>
+                            <div>
+                                <span>2021</span>
+                                <p>Illustration</p>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem corporis ut provident
+                                perferendis ab magni vero cum, officiis non fugit nobis? Velit dolorum alias labore
+                                maxime
+                                facere maiores ducimus cumque.</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="card">
+                        <img src="../img/card3.jpg" alt="">
+                        <div class="card_content">
+                            <h2>36 Days of Malayalam type</h2>
+                            <div>
+                                <span>2018</span>
+                                <p>Typography</p>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem corporis ut provident
+                                perferendis ab magni vero cum, officiis non fugit nobis? Velit dolorum alias labore
+                                maxime
+                                facere maiores ducimus cumque.</p>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <img src="../img/footer.png" alt="">
+        </div>
+    </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
