--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     </header>
     <main>
         <div class="container">
-            <div class="first_block">
+            <div class="first_block d-flex mt-4 mb-4">
                 <div class="first_block__content">
                     <h1>Hi, I am John, <br>Creative Technologist</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae placeat
+                    <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quae placeat
                         fuga aperiam cumque, consequuntur eius repellendus commodi, suscipit rerum, numquam tenetur?
                         Mollitia!</p>
-                    <button>Download Resume</button>
+                    <button class="btn btn-primary mt-5">Download Resume</button>
                 </div>
-                <img src="../img/portrait.png" alt="">
+                <img class="w-25 md rounded-circle" src="img/portrait.png" alt="">
             </div>
         </div>
         <div class="second_block">
@@ -79,7 +79,7 @@
                 <div class="third_block__featured">Featured works</div>
                 <div class="third_block__cards">
                     <div class="card">
-                        <img src="../img/card1.jpg" alt="">
+                        <img src="img/card1.jpg" alt="">
                         <div class="card_content">
                             <h2>Designing Dashboards</h2>
                             <div>
@@ -94,7 +94,7 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <img src="../img/card2.jpg" alt="">
+                        <img src="img/card2.jpg" alt="">
                         <div class="card_content">
                             <h2>Vibrant Portraits of 2020</h2>
                             <div>
@@ -109,7 +109,7 @@
                     </div>
                     <hr>
                     <div class="card">
-                        <img src="../img/card3.jpg" alt="">
+                        <img src="img/card3.jpg" alt="">
                         <div class="card_content">
                             <h2>36 Days of Malayalam type</h2>
                             <div>
@@ -129,7 +129,7 @@
     </main>
     <footer>
         <div class="container">
-            <img src="../img/footer.png" alt="">
+            <img src="img/footer.png" alt="">
         </div>
     </footer>
 
