--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <title>Bootstrap tutorial from Youtube</title>
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
             <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"><span class="navbar-toggler-icon"></span></button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"><span
+                    class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
@@ -46,10 +49,12 @@
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
                     <h1>Become a <span class="text-warning">Web Developer</span></h1>
-                    <p class="lead my-4">We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them for their first dev role</p>
+                    <p class="lead my-4">We focus on teaching our students the fundamentals of the latest and greatest
+                        technologies to prepare them for their first dev role</p>
                     <button class="btn btn-primary btn-lg">Start here</button>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="https://www.frontendbootcampdemo.com/img/showcase.svg" alt="">
+                <img class="img-fluid w-50 d-none d-sm-block"
+                    src="https://www.frontendbootcampdemo.com/img/showcase.svg" alt="">
             </div>
         </div>
     </section>
@@ -60,16 +65,72 @@
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3 md-md-0">Sign Up For Our Newsletter</h3>
                 <div class="input-group news-input">
-                    <input type="text" class="form-control" placeholder="Enter Email" aria-label="Email" aria-describedby="button-addon2">
+                    <input type="text" class="form-control" placeholder="Enter Email" aria-label="Email"
+                        aria-describedby="button-addon2">
                     <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Sign Up</button>
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- Grid Boxes -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Virtual
+                            </h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam? Similique
+                                perspiciatis id minus dignissimos!
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-secondary text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-person-square"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Hybrid
+                            </h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam? Similique
+                                perspiciatis id minus dignissimos!
+                            </p>
+                            <a href="#" class="btn btn-dark">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md"><div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-people"></i> 
+                        </div>
+                       <h3 class="card-title mb-3">
+                           In Person
+                       </h3>
+                       <p class="card-text">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam? Similique perspiciatis id minus dignissimos!
+                       </p>
+                       <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div></div>
             </div>
         </div>
     </section>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://code.jquewry.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
