--- a/index.html
+++ b/index.html
@@ -110,20 +110,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md"><div class="card bg-dark text-light">
-                    <div class="card-body text-center">
-                        <div class="h1 mb-3">
-                            <i class="bi bi-people"></i> 
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-people"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                In Person
+                            </h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam? Similique
+                                perspiciatis id minus dignissimos!
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
                         </div>
-                       <h3 class="card-title mb-3">
-                           In Person
-                       </h3>
-                       <p class="card-text">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam? Similique perspiciatis id minus dignissimos!
-                       </p>
-                       <a href="#" class="btn btn-primary">Read More</a>
                     </div>
-                </div></div>
+                </div>
             </div>
         </div>
     </section>
