--- a/index.html
+++ b/index.html
@@ -141,33 +141,39 @@
                 <div class="col-md p-5">
                     <h2>Learn The Fundamentals</h2>
                     <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto omnis blanditiis facilis corrupti obcaecati?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto omnis blanditiis
+                        facilis corrupti obcaecati?
                     </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique accusamus sequi consequuntur quaerat placeat praesentium, expedita dignissimos dolor enim. Culpa amet ab veritatis magnam harum similique repudiandae voluptatum quibusdam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique accusamus sequi
+                        consequuntur quaerat placeat praesentium, expedita dignissimos dolor enim. Culpa amet ab
+                        veritatis magnam harum similique repudiandae voluptatum quibusdam.</p>
                     <a href="#" class="btn btn-dark mt-3">
-                       <i class="bi bi-chevron-right"></i> Read More
+                        <i class="bi bi-chevron-right"></i> Read More
                     </a>
                 </div>
             </div>
         </div>
     </section>
-    <section class="p-5 bg-dark text-light" id="" >
+    <section class="p-5 bg-dark text-light" id="">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md p-5">
                     <h2>Learn React</h2>
                     <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto omnis blanditiis facilis corrupti obcaecati?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto omnis blanditiis
+                        facilis corrupti obcaecati?
                     </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique accusamus sequi consequuntur quaerat placeat praesentium, expedita dignissimos dolor enim. Culpa amet ab veritatis magnam harum similique repudiandae voluptatum quibusdam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique accusamus sequi
+                        consequuntur quaerat placeat praesentium, expedita dignissimos dolor enim. Culpa amet ab
+                        veritatis magnam harum similique repudiandae voluptatum quibusdam.</p>
                     <a href="#" class="btn btn-light mt-3">
-                       <i class="bi bi-chevron-right"></i> Read More
+                        <i class="bi bi-chevron-right"></i> Read More
                     </a>
                 </div>
                 <div class="col-md">
                     <img class="img-fluid" src="https://www.frontendbootcampdemo.com/img/react.svg" alt="">
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -179,39 +185,149 @@
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <!-- item 1 -->
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Accordion Item #1
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                  </div>
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Where exactly are you located?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+                            laborum obcaecati labore sequi doloribus, dolores explicabo dignissimos perspiciatis dolorem
+                            velit facere, similique suscipit asperiores voluptate excepturi architecto. Natus, vero
+                            unde?</div>
+                    </div>
+                </div>
+                <!-- item 2 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            How much does it cost to attend?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+                            accusamus repudiandae, nulla autem, dolorem consequatur alias vitae ipsum aliquam odit
+                            voluptate corporis? Harum possimus dolorum tenetur! Aperiam error ducimus voluptatibus!
+                        </div>
+                    </div>
+                </div>
+                <!-- item 3 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            What do I need to Know?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Voluptatibus soluta aspernatur itaque ipsam corrupti sed modi eos hic vel ipsum, eveniet
+                            repellat nostrum voluptatem omnis officiis harum optio possimus officia.</div>
+                    </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Accordion Item #2
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                  </div>
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFour" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            How Do I sign up?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+                            iste accusantium quidem aliquid facilis culpa! Et maxime quos dolorum nihil porro nulla
+                            eligendi placeat cupiditate ab quo dolorem, recusandae aspernatur?</div>
+                    </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Accordion Item #3
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                  </div>
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFive" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            Do you help me find a job?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFive" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus,
+                            optio soluta pariatur illo aliquam tempora quae? Quis aliquid cumque enim reiciendis
+                            obcaecati in harum, ea perferendis repudiandae? Consectetur, optio voluptas!</div>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
     </section>
 
+    <!-- Our Instructors -->
+    <section id="instructors" class="p-5 bg-primary">
+        <div class="container">
+            <div class="text-center text-light mb-5">
+                <h2>Our Instructors</h2>
+                <p class="lead">Our instructors all have 5+ years working as a web developer in the industry</p>
+            </div>
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/men/91.jpg"
+                                alt="">
+                            <h3 class="card-title mb-3">John Doe</h3>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
+                    </div>                    
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/women/91.jpg"
+                                alt="">
+                            <h3 class="card-title mb-3">Jane Doe</h3>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
+                    </div>                    
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/men/76.jpg"
+                                alt="">
+                            <h3 class="card-title mb-3">Josh Doe</h3>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
+                    </div>                    
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/women/81.jpg"
+                                alt="">
+                            <h3 class="card-title mb-3">Josaleen Doe</h3>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
+                    </div>                    
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://code.jquewry.com/jquery-3.4.1.slim.min.js"></script>
