--- a/index.html
+++ b/index.html
@@ -329,6 +329,39 @@
         </div>
     </section>
 
+    <!-- Contact and Map -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">Contact Info</h2>
+                    <p><b>Main Location:</b> 50 Main st, Boston MA</p>
+                    <hr>
+                    <p><b>Enrollment Phone:</b> (555) 555-5555</p>
+                    <hr>
+                    <p><b>Student Phone:</b>(333) 333-3333</p>
+                    <hr>
+                    <p><b>Enrollment Email:</b>enroll@frontendbc.test</p>
+                    <hr>
+                    <p><b>Student Email:</b>student@frontendbc.test</p>
+                    
+                </div>
+                <div class="col-md">
+                    <iframe class="rounded-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.5591568865666!2d-71.06448938454328!3d42.37323347918603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370ed678c5c7b%3A0x1151236a3eb3c8e2!2zNTAgTWFpbiBTdCwgQ2hhcmxlc3Rvd24sIE1BIDAyMTI5LCDQodCo0JA!5e0!3m2!1sru!2sua!4v1632225423129!5m2!1sru!2sua" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+            <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+            <a href="#" class="position-absolute bottom-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle h1"></i>
+            </a>
+        </div>
+    </footer>
 
     <script src="https://code.jquewry.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
